--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ dataRetrieval 2.7.22
 * Removed daily_id from read_waterdata_daily output since it
 is not stable over time. Moved other "id" columns to end of returned data frames.
 * Changed examples for stateCd, countyCd, and parameterCdFile. Users are
-encouraged to migreate to the "read_waterdata_metadata" functions.
+encouraged to migrate to the "read_waterdata_metadata" functions.
 * Added no_paging argument. This will make the request more efficient, but is not 
 recommended because it will silently cut off data after 50,000 rows.
 
