--- a/tutorials/changes_slides_deck.qmd
+++ b/tutorials/changes_slides_deck.qmd
@@ -790,13 +790,11 @@ time_zone_codes <- read_waterdata_metadata("time-zone-codes")
 
 ## Limit Explanation
 
-* [Limits](https://doi-usgs.github.io/dataRetrieval/articles/read_waterdata_functions.html#limit-vs-max_results)
-
-  - `max_results` lets you define how many rows are returned 
-  
   - `limit` lets you define how many rows are returned **per page** of data. With a good internet connection, you can probably get away with ignoring this argument.
 
-I would ignore both most of the time.
+  - Leaving the `limit` argument to the default will return 50,000 rows per page.
+
+  - `no_paging` argument (`TRUE`/`FALSE`) will only return 1 page of data, therefore the `limit` argument will define how many rows are returned.
 
 ## Adding API token to CI jobs: GitLab
 
