--- a/vignettes/Status.Rmd
+++ b/vignettes/Status.Rmd
@@ -60,10 +60,12 @@ df <- data.frame(
     "read_waterdata_field_measurements",
     "read_waterdata_field_measurements",
     "read_waterdata",
-    rep("", 6)
+    "", "",
+    "read_waterdata_stats_por, read_waterdata_stats_daterange",
+    rep("", 3)
   ),
   "Available on (branch)" = c(rep("main (CRAN)", 5), 
-  "develop", "develop", "main (CRAN)",  rep("", 6))
+  "develop", "develop", "main (CRAN)",  "", "", "develop", rep("", 3))
 )
 
 knitr::kable(df, col.names = c("WaterServices (legacy) function", "Water Data (new) function", "Available on (branch name)"))
