--- a/vignettes/dataRetrieval.Rmd
+++ b/vignettes/dataRetrieval.Rmd
@@ -66,7 +66,7 @@ Functions <- c(
   "readNWISpeak",
   "read_waterdata_field_measurements",
   "readNWISuse",
-  "readNWISstat",
+  "read_waterdata_stats_por, read_waterdata_stats_daterange",
   "read_waterdata_parameter_codes",
   "read_waterdata_monitoring_location",
   "read_waterdata_samples",
@@ -436,13 +436,19 @@ national <- readNWISuse(
 ```
 
 ## Statistics Data
-Retrieves site statistics from the USGS Statistics Web Service beta.  
+Retrieves site statistics from the [USGS Water Data Statistics API](https://api.waterdata.usgs.gov/statistics/v0/docs). 
+The `read_waterdata_stats_por` function retieves day-of-year and month-of-year daily data statistics from the `observationNormals` endpoint.
+The `read_waterdata_stats_daterange` function retieves calendar month, calendar year, and water year daily data statistics from the `observationIntervals` endpoint.
 
 ```{r eval=FALSE}
-discharge_stats <- readNWISstat(
-  siteNumbers = c("02319394"),
-  parameterCd = c("00060"),
-  statReportType = "annual"
+discharge_stats_por <- read_waterdata_stats_por(
+  monitoring_location_id = "USGS-05428500",
+  parameter_code = "00060"
+)
+
+discharge_stats_daterange <- read_waterdata_stats_daterange(
+  monitoring_location_id = "USGS-05428500",
+  parameter_code = "00060"
 )
 ```
 
