Pretty up the bands

--- a/vignettes/daily_data_statistics.Rmd
+++ b/vignettes/daily_data_statistics.Rmd
@@ -3,8 +3,10 @@ title: "Introducing read_waterdata_statistics_*"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Introducing read_waterdata_statistics_*}
-  %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+  %\VignetteEngine{knitr::rmarkdown}
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r, include = FALSE}
@@ -95,12 +97,16 @@ doy_perc_bands_plt <-
   mutate(time_of_year = as.Date(time_of_year, format = "%m-%d")) |>
   pivot_wider(names_from = percentile, values_from = value) |>
   ggplot(aes(x = time_of_year)) +
-  geom_line(aes(y = `0`), linetype = "dashed", linewidth = .2) +
-  geom_line(aes(y = `100`), linetype = "dashed", linewidth = .2) +
-  geom_ribbon(aes(ymin = `5`, ymax = `95`), fill = "grey80") +
-  geom_ribbon(aes(ymin = `10`, ymax = `90`), fill = "grey70") +
-  geom_ribbon(aes(ymin = `25`, ymax = `75`), fill = "grey60") +
-  geom_line(aes(y = `50`), linewidth = .2, color = "gray40") +
+  # geom_line(aes(y = `0`), linetype = "dashed", linewidth = .2) +
+  # geom_line(aes(y = `100`), linetype = "dashed", linewidth = .2) +
+  geom_ribbon(aes(ymin = `95`, ymax = `100`), fill = "#292f6b", alpha = 0.7) +
+  geom_ribbon(aes(ymin = `90`, ymax = `95`), fill = "#5699c0", alpha = 0.7) +
+  geom_ribbon(aes(ymin = `75`, ymax = `90`), fill = "#aacee0", alpha = 0.7) +
+  geom_ribbon(aes(ymin = `25`, ymax = `75`), fill = "#e9e9e9", alpha = 0.7) +
+  geom_ribbon(aes(ymin = `10`, ymax = `25`), fill = "#ebd6ab", alpha = 0.7) +
+  geom_ribbon(aes(ymin = `5`, ymax = `10`), fill = "#dcb668", alpha = 0.7) +
+  geom_ribbon(aes(ymin = `0`, ymax = `5`), fill = "#8f4f1f", alpha = 0.7) +
+  geom_line(aes(y = `50`), linewidth = .2, color = "black") +
   scale_x_date(date_labels = "%b", date_breaks = "1 month") +
   labs(
     x = "Month–day",
