--- a/vignettes/Status.Rmd
+++ b/vignettes/Status.Rmd
@@ -59,12 +59,15 @@ df <- data.frame(
     "read_waterdata_field_measurements",
     "read_waterdata_field_measurements",
     "read_waterdata",
-    "read_waterdata_continuous", "",
+    "read_waterdata_continuous", 
+    "", #rating
     "read_waterdata_stats_por, read_waterdata_stats_daterange",
     rep("", 3)
   ),
-  "Available on (branch)" = c(rep("main (CRAN)", 5), 
-  "develop", "develop", "main (CRAN)",  "develop", "", "develop", rep("", 3))
+  "Available on (branch)" = c(rep("main (CRAN)", 9), 
+                              "",
+                              "develop", 
+                              rep("", 3))
 )
 
 knitr::kable(df, col.names = c("WaterServices (legacy) function", "Water Data (new) function", "Available on (branch name)"))
